--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -87,13 +87,13 @@
     </LinearLayout>
 
 
-    <com.haksoy.soip.CaptureLayout
+    <com.haksoy.soip.cameralibrary.CaptureLayout
         android:id="@+id/capture_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
 
-    <com.haksoy.soip.FoucsView
+    <com.haksoy.soip.cameralibrary.FoucsView
         android:id="@+id/fouce_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
